Update EDA on Cars Dataset.ipynb

--- a/EDA on Cars Dataset.ipynb
+++ b/EDA on Cars Dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What is Explanatory Data Analysis (EDA) ?\n",
+    "### What is Exploratory Data Analysis (EDA) ?\n",
     "`Exploratory Data Analysis refers to the critical process of performing initial investigations on data so as to discover patterns,to spot anomalies,to test hypothesis and to check assumptions with the help of summary statistics and graphical representations.`\n",
     "- Now let's see how to implement EDA on a Dataset(I have used Car Features Dataset from Kaggle)"
    ]
